Migrated to Charsets from Strings.